# parallel-pytest

./: .gitignore  CHANGELOG.md  LICENSE  README.md  action.yml  parallel_pytest.py  pyproject.toml  pyproject.toml.example
para_pytest/: __init__.py  runner.py
tests/: test_example_1.py  test_example_2.py  test_more.py
tests/unit/specific/: test_specific_1.py
