[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "para-pytest"
version = "0.1.3"
description = "Run pytest tests in parallel chunks for faster test execution"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [{name = "ALHelton"}]

dependencies = [
	"pytest>=7.0.0",
	"pytest-json-report>=1.5.0"
]

[project.scripts]
para-pytest = "para_pytest.runner:main"